--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="audio/sound1.gif" alt="sound wave" />
         <img src="audio/sound2.gif" alt="sound wave" />
       </div>
-      <div style="padding-top: 40px">
+      <div class="buttons-container">
         <div class="buttons">
           <button class="square" data-audio="1">1</button>
           <button class="square" data-audio="2">2</button>
