--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div id="cal-body">
+    <div class="cal-body">
       <div class="input">
         <img src="audio/sound1.gif" alt="sound wave" />
         <img src="audio/sound2.gif" alt="sound wave" />
